# smart-home-system

./: .firebaserc  .gitignore  CONFIG_REQUIRED.md  README.md  firebase.json  firestore.rules  package-lock.json  package.json  test_all.sh  test_rules.js  ui.html
SmartHomeSystem/: .gitignore  ARCHITECTURE.md  Android.bp  AndroidManifest.xml  CODEX.md  CONFIG_REQUIRED.md  IMPLEMENTATION_AUDIT.md  gradle.properties  settings.gradle
SmartHomeSystem/app/: build.gradle
SmartHomeSystem/config/: firebase_database.rules.example.json  smarthome_oauth_secrets.example.json
SmartHomeSystem/gradle/: libs.versions.toml
SmartHomeSystem/models/: best_human_int8_dynamic.onnx  best_int8_dynamic.onnx
docs/: ARCHITECTURE.md  BLE_MESH_PHASES.md
docs/hardware_gpio_display_phases/: PHASE_00_AUDIT_AND_CURRENT_STATE.md  PHASE_01_ENVIRONMENT_GPIO_AND_MQ7.md  PHASE_02_ENVIRONMENT_ST7789_DISPLAY.md  PHASE_03_RFID_FINGERPRINT_GPIO.md  PHASE_04_SSD1306_OLED_DISPLAY.md  PHASE_05_FULL_VALIDATION_AND_FINAL_HANDOFF.md
functions/: index.js  package.json
node_camera/: .gitignore  CLAUDE.md  CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32cam
node_camera/config/: capability_descriptor.camera.jsonc
node_camera/docs/: README.md
node_camera/include/: camera_capability_descriptor.h  camera_capture.h  camera_motion_snapshot_policy.h  camera_node_identity.h  camera_protocol.h  camera_server.h  camera_stream_pipeline.h  nvs_config.h  provisioning_parser.h
node_camera/src/: CMakeLists.txt  ble_mesh_handler.c  camera_capability_descriptor_stub.c  camera_capture.c  camera_motion_snapshot_policy_stub.c  camera_node_identity_stub.c  camera_protocol.c  camera_server.c  camera_stream_pipeline_stub.c  main.c  nvs_config.c  provisioning_parser.c  wifi_manager.c
node_camera/test/: CMakeLists.txt  README.md  test_camera_protocol.c
node_rfid_finger_print/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
node_rfid_finger_print/config/: capability_descriptor.access.jsonc
node_rfid_finger_print/docs/: CREDENTIAL_STORE.md  README.md
node_rfid_finger_print/include/: access_authorization.h  access_capability_descriptor.h  access_control_pipeline.h  access_credential_privacy.h  ble_mesh_handler.h  board_pins.h  credential_store.h  display_ssd1306.h  ingest_auth.h  mfrc522.h  mfrc522_protocol.h  nvs_config.h  relay.h  tzm1026.h  tzm1026_protocol.h
node_rfid_finger_print/src/: CMakeLists.txt  access_authorization.c  access_capability_descriptor_stub.c  access_control_pipeline.c  access_credential_privacy.c  ble_mesh_handler.c  credential_store.c  display_ssd1306.c  main.c  mfrc522.c  mfrc522_protocol.c  nvs_config.c  relay.c  tzm1026.c  tzm1026_protocol.c
node_rfid_finger_print/test/: CMakeLists.txt  README.md  test_access_security.c
node_sensor_enviroment/: CMakeLists.txt  fix_app_upload_offset.py  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
node_sensor_enviroment/config/: capability_descriptor.env.jsonc
node_sensor_enviroment/include/: mq7.h  (+21 more)
node_sensor_enviroment/src/: CMakeLists.txt  adc_reader.c  adc_sample_math.c  ble_mesh_handler.c  bme680_i2c.c  bme680_status.c  dht22.c  dht22_protocol.c  display_st7789.c  environment_capability_descriptor.c  environment_capability_descriptor_stub.c  environment_node_identity_stub.c  environment_sensor_fusion.c  environment_sensor_fusion_stub.c  environment_sensor_pipeline.c  environment_sensor_pipeline_stub.c  gp2y1014.c  gp2y1014_conversion.c  ingest_auth.c  main.c  mq7.c  mq7_conversion.c  mq7_cycle.c  nvs_config.c  provisioning_parser.c  sensor_status.c  test_sensor_fusion.c  test_sensor_pipeline.c  wifi_manager.c
node_sensor_enviroment/test/: CMakeLists.txt  README.md  test_environment_safety.c
smart_home_mobile_app/: .gitignore  FIREBASE_SETUP.md  PHASE5_STATUS.md  gradle.properties  settings.gradle
(+258 files in other folders)
