idf_component_register(
    SRCS
        "main.c"
        "ble_mesh_handler.c"
        "camera_capture.c"
        "camera_protocol.c"
        "camera_server.c"
        "nvs_config.c"
        "provisioning_parser.c"
        "wifi_manager.c"
    INCLUDE_DIRS "../include"
    REQUIRES
        bt
        esp32-camera
        esp_event
        esp_http_server
        esp_netif
        esp_timer
        esp_wifi
        nvs_flash
)
